Clear assigned optimes when an insert batch fails

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Replication
    • Fully Compatible
    • ALL
    • Repl 2024-04-01, Repl 2024-04-15
    • 147
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In the case where a batch insert fails, and we do an upgrade setFCV to 8.0 before retrying one-by-one, we must reset the optimes that were stored in the vector of the InsertStatements. If we don't we will use old optimes which will result in an invariant failure.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Wenbin Zhu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: