SERVER-88690 Clear assigned optimes when an insert batch fails

GitOrigin-RevId: 24d9b5c1cfb95ad26a1e9e5a112d340021832d9c